--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="favicon.png" type="image/png"/>
 </head>
 <body>
     <h1>Hello, World!</h1>
